--- a/Div2/main.tex
+++ b/Div2/main.tex
@@ -10,11 +10,11 @@
     \small{
         \clink{
             \href{mailto:relilau00@gmail.com}{relilau00@gmail.com} \textbf{·} 
-            {\fontdimen2\font=0.75ex +82 010 4147 5331} 
+            {\fontdimen2\font=0.75ex +82 010 4147 5331}
             \newline
             \href{https://github.com/naem1023}{\faGithub \, https://github.com/naem1023}
             \textbf{·} 
-            \href{https://velog.io/@naem1023/series}{\faEdit \,https://velog.io/@naem1023/series}
+            \href{https://velog.io/@naem1023/series}{\faClipboard \,https://velog.io/@naem1023/series}
         }
     }
 } & 
@@ -44,9 +44,9 @@
             % item 1 %
             \item \frcontent{네이버 부스트캠프 AI Tech 2기 Award}{\textbf{2nd} place, KLUE Open-Domain Question Answering 대회 \newline \textbf{2nd} place, KLUE Relation Extraction 대회\newline \textbf{5th} place, Mask Image Classification 대회}{}{2021}
             % item 2 %
-            \item \frcontent{Kaggle, Hindi and Tamil Question Answering}{\textbf{Silver medal, 43th}   \href{https://github.com/quarter-100/Hlue}{[\underline{Github}]}}{}{2021}
+            \item \frcontent{Kaggle, Hindi and Tamil Question Answering}{\textbf{Silver medal, 43th}   \href{https://github.com/quarter-100/Hlue}{[\faGithub\, \underline{Github}]}}{}{2021}
             % item 2 %
-            \item \frcontent{AI Factory 텍스트 요약 온라인 해커톤 대회}{\textbf{2nd} place  \href{https://github.com/quarter-100/text-summarization}{[\underline{Github}]}}{}{2021}
+            \item \frcontent{AI Factory 텍스트 요약 온라인 해커톤 대회}{\textbf{2nd} place  \href{https://github.com/quarter-100/text-summarization}{[\faGithub\, \underline{Github}]}}{}{2021}
             % item 2 %
             \item \frcontent{해킹캠프, POC}{\textbf{Best Hacker and Team Winner}, CTF Award}{}{2014}
         \end{itemize}
@@ -64,10 +64,10 @@
 {
     \csection{PROJECTS}{\begin{flushleft} \small
         \begin{itemize}
-            \item \frcontent{딥러닝 MRC를 활용한 스무고개 게임, \textit{2021} \clink{\href{https://github.com/boostcampaitech2/final-project-level3-nlp-09}{[\underline{Github}]}}}{Project Manager, Backend 개발 담당\newline- 도커라이징을 통한 모델 서빙 담당 \newline - 프로젝트 설계, 역할 분배, 병합 \newline - 모델 재학습, 서빙, CI/CD 파이프라인 설계}{}{Docker, FastAPI, Flask, Python, HuggingFace, Pytorch, Shell script}
-            \item \frcontent{KLUE Open-Domain Question Answering, \textit{2021} \clink{\href{https://naem1023.notion.site/ODQA-4be47dae144f479fb70431181cdd1cbc}{[\underline{Team Portfolio}]}\href{https://github.com/boostcampaitech2/mrc-level2-nlp-09}{[\underline{Github}]}}}{Retrieval, Reader model 개선 \newline - Question Generation를 이용한 Data Augmentation \newline - 데이터 후처리}{}{Python, HuggingFace, Pytorch, Shell Script}
-            \item \frcontent{ KLUE Relation Extraction, \newline \textit{2021}   \clink{\href{https://naem1023.notion.site/KLUE-ad3b884f6c2a4f28a00b548aa12c51b6}{[\underline{Team Portfolio}]}\;\href{https://github.com/boostcampaitech2/klue-level2-nlp-09}{[\underline{Github}]}}}{Relation Extraction Model 개선\newline - Back Translation으로 Task Adaptive Pre-Training}{}{Python, HuggingFace, Pytorch, Shell Script} 
-            \item \frcontent{2D 이미지의 픽셀 단위 미터 거리 측정 졸업프로젝트, \textit{2020}  \clink{ \href{https://github.com/naem1023/Measuring-Image-Distance}{[\underline{Github}]}}}{- Distance Regressor(\href{https://arxiv.org/abs/1909.04182}{\underline{arXiv link}})와 Faster RCNN( \href{https://arxiv.org/abs/1506.01497}{\underline{arXiv link}})을 혼합하여 모델 구현 \newline - Test dataset 평가지표: RMSE 2.39 
+            \item \frcontent{딥러닝 MRC를 활용한 스무고개 게임, \textit{2021} \clink{\href{https://github.com/boostcampaitech2/final-project-level3-nlp-09}{[\faGithub\, \underline{Github}]}}}{Project Manager, Backend 개발 담당\newline- 도커라이징을 통한 모델 서빙 담당 \newline - 프로젝트 설계, 역할 분배, 병합 \newline - 모델 재학습, 서빙, CI/CD 파이프라인 설계}{}{Docker, FastAPI, Flask, Python, HuggingFace, Pytorch, Shell script}
+            \item \frcontent{KLUE Open-Domain Question Answering, \textit{2021} \clink{\href{https://naem1023.notion.site/ODQA-4be47dae144f479fb70431181cdd1cbc}{[\faFileTextO \, \underline{Team Portfolio}]}\href{https://github.com/boostcampaitech2/mrc-level2-nlp-09}{[\faGithub\, \underline{Github}]}}}{Retrieval, Reader model 개선 \newline - Question Generation를 이용한 Data Augmentation \newline - 데이터 후처리}{}{Python, HuggingFace, Pytorch, Shell Script}
+            \item \frcontent{ KLUE Relation Extraction, \newline \textit{2021}   \clink{\href{https://naem1023.notion.site/KLUE-ad3b884f6c2a4f28a00b548aa12c51b6}{[\faFileTextO \, \underline{Team Portfolio}]}\;\href{https://github.com/boostcampaitech2/klue-level2-nlp-09}{[\faGithub\, \underline{Github}]}}}{Relation Extraction Model 개선\newline - Back Translation으로 Task Adaptive Pre-Training}{}{Python, HuggingFace, Pytorch, Shell Script} 
+            \item \frcontent{2D 이미지의 픽셀 단위 미터 거리 측정 졸업프로젝트, \textit{2020}  \clink{ \href{https://github.com/naem1023/Measuring-Image-Distance}{[\faGithub\, \underline{Github}]}}}{- Distance Regressor(\href{https://arxiv.org/abs/1909.04182}{\underline{arXiv link}})와 Faster RCNN( \href{https://arxiv.org/abs/1506.01497}{\underline{arXiv link}})을 혼합하여 모델 구현 \newline - Test dataset 평가지표: RMSE 2.39 
             \newline - RabbitMQ와 FastAPI의 비동기화 api를 통해 여러 사용자의 모델 추론 요청을 처리}{}{Python, Pytorch, FastAPI, Rabbit-MQ, Docker, Shell Script}         
             \item \frcontent{연구실 실험용 앱 개발, \textit{2020} }{연구실 실험을 위한 알람 및 단어 테스트를 위한 크로스 플랫폼 앱 개발\newline \textit{성균관대학교 인터랙션사이언스학과}}{}{Swift, React-Native, Firebase}
             
